# backend-example

./: .dockerignore  .env.test  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.githooks/: pre-push  pre-push.sh
.github/.workflow/: pipeline.yml
.github/workflows/: app-pipeline.yml
.sqlx/: query-0e8a94cccfc247e264948dbd76aed8d2c99a37b97ce748cda9cc3885f9db954e.json  query-0eb8608bd3a97d4fc48d4e5bf30d7b9ac1ad2abf24de0386a016df3f00c54e7e.json  query-1d14efc2d8b21da0613002a762d2bf8cb8e2682b12031ff67cdec6f064f41297.json  query-2f12e612821996673e28abb71af344c20b4604e2088e2e03b80cdef695d8f0be.json  query-2ffbdcab00e8c69a69fb49cf9294319878f6542de9b9fd4e955397b0d8052550.json  query-36e23e3e1290af361c618c4d8d1a57a2d6a94fba7dc557eddddef21e77c23376.json  query-39b438da2464cf03e794cd274791a48e17438a95fe27f7e05d3ef57dba678c08.json  query-401229f2ed8b7868cf4e70cbf494af3897a843ea7dace877dfde902f336eef5f.json  query-51b3eabeb183e0a0d43fbc93bc53d487738baefeea968acc6ca25164a857fc67.json  query-68b26dc416690332ee59cb348c7687e3b709c209b5aea675f54917dcac727ce8.json  query-6f299434e21adf4186b4374591b70e9e0b9adb72950f68cd647f2f34a51fc81c.json  query-8a2efd0c2ade694c11922435289b7894d48704f6167dbdaa55b2ad0a9302f3fa.json  query-8f8da73c41d1f42e4a6227908302f68660d0dc9b05b05cbcde5a99f34faa64e8.json  query-9162b89dee53ecffbca45c63abe0951590a78a7b4f55b4f21cfb9949b16bd69f.json  query-a3bf8854dfd05466619c3a5405a63343787ec7ac0cf7412da8ba55ef330ba5b8.json  query-a3d16587bb35b271fdbba8734e80724e108b9b6431ad50de90e7a3252e21e9c6.json  query-ad70ea2ca7c0b3c987944832d94ce7d514cac63e30c85213f7cde1da69e09aed.json  query-ec66539f766742b553d460a4430f953d99a9287ec0b19869106b309e3d5afb3b.json  query-f0c3ab6f94f8c6b8351f6e077c44c493660e9282dacdf8468992a1a16ea0bd4c.json  query-f6f9769eee5dc3666e701f3ee3a7cbf1247cea0a7b5c83372bf27e0edab65b74.json  query-fd0fe9fa9c32de396fecde7d28cd5bd01c87afec95e7d95e96e654052485b6c2.json
migrations/: 20240607160804_user.sql  20241015125122_refresh_token.sql  20241130210236_post.sql
src/: config.rs  docs.rs  error.rs  lib.rs  main.rs
src/middleware/: auth.rs  azure.rs  db.rs  mod.rs  validate.rs
src/models/: mod.rs  post.rs  user.rs
src/routes/: mod.rs
src/routes/v1/: failure.rs  health.rs  mod.rs
src/routes/v1/auth/: login.rs  mod.rs  refresh.rs  register.rs
src/routes/v1/post/: comment.rs  create.rs  edit.rs  mod.rs  posts.rs
src/routes/v1/posts/: comment.rs  create.rs  delete.rs  edit.rs  list.rs  mod.rs
src/routes/v1/posts/comments/: create.rs  delete.rs  edit.rs  list.rs  mod.rs
src/utils/: env.rs  mod.rs
src/utils/pwd/: mod.rs  parts.rs
src/utils/pwd/scheme/: error.rs  mod.rs  scheme_01.rs
src/utils/token/: claims.rs  error.rs  keys.rs  mod.rs
terraform/: .terraform.lock.hcl  azure.tf  container-app.tf  database.tf  deploy.tf  github-env.tf  github.tf  logging.tf  main.tf  network.tf  remote-state.tf  terraform.tf  variables.tf
terraform/bootstrap/: deploy.tf  github.tf  terraform.tf
terraform/env/: prod.hcl  stag.hcl
terraform/ext/: deploy.tf  github.tf  main.tf  remote-state.tf  terraform.tf
