[package]
name = "lerpz-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# -- Web
axum = { version = "0.7", features = ["macros", "tokio", "json", "ws", "tracing"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["full"] }
utoipa = { version = "5.3", features = ["uuid", "chrono"] }
utoipa-swagger-ui = { version = "8.1", features = ["axum", "reqwest"] }
# -- Async
tokio = { version = "1.41", features = ["full"] }
futures-util = "0.3"
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Serde
serde = "1.0"
serde_json = "1.0"
# -- Database
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "chrono",
    "migrate",
    "macros",
    "uuid",
] }
# -- Other
anyhow = "1.0"
thiserror = "2.0"
rand = "0.8"
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
argon2 = { version = "0.5", features = ["std"] }
dotenvy = "0.15"
regex = "1.11"
uuid = { version = "1.11", features = ["v4", "serde"] }

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1

[[bin]]
name = "lerpz-backend"
path = "src/main.rs"
